--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
-ADD TEST
+REPARE CMAKE
+ADD MULTI-THREADING
+ADD TEST + gitaction
 ADD CHUNK SUPERPOSITION
 ADD LIBDSG FIND REF CHR
+ADD LMM
+ADD EQTL
+ADD NUMBER OF PATHS PER CHR THAT CAN BE USED AS LENGTH FOR THE MATRIX 
