--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
-REPARE CMAKE
 ADD MULTI-THREADING
-ADD TEST + gitaction
+ADD TEST + gitAction
 ADD CHUNK SUPERPOSITION
 ADD LIBDSG FIND REF CHR
 ADD LMM
