correct snarl decomp only

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 ADD MULTI-THREADING
-ADD FONCTION TEST
+ADD FONCTIONNAL TEST
 ADD CHUNK SUPERPOSITION
 ADD LIBDSG FIND REF CHR
-ADD LMM
+ADD LMM TEST
 ADD EQTL
 ADD NUMBER OF PATHS PER CHR THAT CAN BE USED AS LENGTH FOR THE MATRIX 
