--- a/TODO
+++ b/TODO
@@ -1,7 +1,9 @@
 ADD MULTI-THREADING
+TRY TO FIT PERFECTLY OR GET BETTER RESULT THAT PY IMPLEMENTATION
+COMPILE/INTEGER THE PY SCRIPT INTO THE EXECUTABLE
 ADD FONCTIONNAL TEST
 ADD CHUNK SUPERPOSITION
 ADD LIBDSG FIND REF CHR
-ADD LMM TEST
-ADD EQTL
+ADD LMM + TEST
+ADD EQTL + TEST
 ADD NUMBER OF PATHS PER CHR THAT CAN BE USED AS LENGTH FOR THE MATRIX 
