--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
-MODIFY the p_adjusted and replace it to c++ (do vector pair <pvalue, index line> (binary case do the means of pvalue) sort it  and calcul the BH)
-ADD MULTI-THREADING
+REPARE BINARY ANALYSIS ON MULTI CHR
+REPARE FIRST VARIANT 
+
+ADD MULTI-THREADING quantitative
 TRY TO FIT PERFECTLY OR GET BETTER RESULT THAT PY IMPLEMENTATION
 COMPILE/INTEGER THE PY SCRIPT INTO THE EXECUTABLE
 ADD FONCTIONNAL TEST
