convert size_t to unit64_t and improve fisher stat

--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
+CHANGE THE TIME SNARL LIST PATH FILTRATION TO AN N NODES PARSED FILTER
 REPARE BINARY ANALYSIS ON MULTI CHR
 REPARE FIRST VARIANT 
-
 ADD MULTI-THREADING quantitative
 TRY TO FIT PERFECTLY OR GET BETTER RESULT THAT PY IMPLEMENTATION
 COMPILE/INTEGER THE PY SCRIPT INTO THE EXECUTABLE
@@ -9,4 +9,4 @@ ADD CHUNK SUPERPOSITION
 ADD LIBDSG FIND REF CHR
 ADD LMM + TEST
 ADD EQTL + TEST
-ADD NUMBER OF PATHS PER CHR THAT CAN BE USED AS LENGTH FOR THE MATRIX 
+ADD CHUNK ANALYSIS : NUMBER OF PATHS PER CHR THAT CAN BE USED AS LENGTH FOR THE MATRIX 
