--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 CHANGE THE TIME SNARL LIST PATH FILTRATION TO AN N NODES PARSED FILTER
+ADD THE --PHENO AND REMOVE --BINARY & --QUANTITATIVE
 REPARE BINARY ANALYSIS ON MULTI CHR
 REPARE FIRST VARIANT 
 ADD MULTI-THREADING quantitative
