opti parsing phenotype

--- a/TODO
+++ b/TODO
@@ -1,7 +1,4 @@
-CHANGE THE TIME SNARL LIST PATH FILTRATION TO AN N NODES PARSED FILTER
-ADD THE --PHENO AND REMOVE --BINARY & --QUANTITATIVE
-REPARE BINARY ANALYSIS ON MULTI CHR
-REPARE FIRST VARIANT 
+REPARE FIRST VARIANT SIMULATED
 ADD MULTI-THREADING quantitative
 TRY TO FIT PERFECTLY OR GET BETTER RESULT THAT PY IMPLEMENTATION
 COMPILE/INTEGER THE PY SCRIPT INTO THE EXECUTABLE
