--- a/TODO
+++ b/TODO
@@ -1,9 +1,14 @@
-REPARE FIRST VARIANT SIMULATED
-ADD MULTI-THREADING quantitative
+REPARE FIRST VARIANT SIMULATION RESULT STOAT
+OPTIMIZE STOAT USING :
+- Valgrind (memory usage and CPU profiling)
+- gprof (performance bottlenecks)
+- perf (find slow parts of the code)
+
+ADD MULTI-THREADING QUANTITATIVE
 TRY TO FIT PERFECTLY OR GET BETTER RESULT THAT PY IMPLEMENTATION
 ADD FONCTIONNAL TEST
 ADD CHUNK SUPERPOSITION
-ADD LIBDSG FIND REF CHR
+USE LIBDSG FIND REF CHR
 ADD LMM + TEST
 ADD EQTL + TEST
 ADD CHUNK ANALYSIS : NUMBER OF PATHS PER CHR THAT CAN BE USED AS LENGTH FOR THE MATRIX 
